--- a/Mathematics_Formulary/sections/geometry.tex
+++ b/Mathematics_Formulary/sections/geometry.tex
@@ -256,14 +256,16 @@ $
 \subsection{Cylindrical Coordinates}
 A cylindrical coordinate system is a three-dimensional coordinate system that specifies point positions by the distance from a chosen reference axis, the direction from the axis relative to a chosen reference direction, and the distance from a chosen reference plane perpendicular to the axis. The latter distance is given as a positive or negative number depending on which side of the reference plane faces the point.
 
-For the conversion between cylindrical and Cartesian coordinates, it is convenient to assume that the reference plane of the former is the Cartesian $xy$-plane (with equation $z = 0$), and the cylindrical axis is the Cartesian $z$-axis. Then the $z$-coordinate is the same in both systems, and the correspondence between cylindrical (radius $\rho$, azimuth $\varphi$, elevation $\zeta$) and Cartesian are the same as for polar coordinates, namely
+\subsubsection{Convert From and To Cartesian coordinates}
+For the conversion between cylindrical and Cartesian coordinates, it is convenient to assume that the reference plane of the former is the Cartesian $xy$-plane (with equation $z = 0$), and the cylindrical axis is the Cartesian $z$-axis. Then the $z$-coordinate is the same in both systems, and the correspondence between cylindrical (radius $\rho$, azimuth $\varphi$, elevation $z$) and Cartesian are the same as for polar coordinates, namely
 \[
-x=\rho \cos \varphi  ~~~, ~~~ y=\rho \sin \varphi ~~~, ~~~ z=\zeta
+x=\rho \cos \varphi  ~~~, ~~~ y=\rho \sin \varphi ~~~, ~~~ z=z
 \]
 
 \subsection{Spherical Coordinates}
 In mathematics, a spherical coordinate system is a coordinate system for three-dimensional space where the position of a point is specified by three numbers: the radial distance of that point from a fixed origin, its polar angle measured from a fixed zenith direction, and the azimuth angle of its orthogonal projection on a reference plane that passes through the origin and is orthogonal to the zenith, measured from a fixed reference direction on that plane.
 
+\subsubsection{Convert From and To Cartesian coordinates}
 The spherical coordinates of a point in the ISO convention (i.e. for physics: radius $r$, inclination $\theta$, azimuth $\varphi$) can be obtained from its Cartesian coordinates $(x, y, z)$ by the formulae:
 \[
 r=\sqrt{x^2+y^2+z^2} ~~,~~ \theta=\arccos\frac{z}{r} ~~,~~ \varphi = \arctan\frac{y}{x}
@@ -272,4 +274,17 @@ r=\sqrt{x^2+y^2+z^2} ~~,~~ \theta=\arccos\frac{z}{r} ~~,~~ \varphi = \arctan\fra
 Conversely, the Cartesian coordinates may be retrieved from the spherical coordinates (where $r \in [0, +\infty), \theta \in [0, \pi], \varphi \in [0, 2\pi)$), by:
 \[
 x=r\sin\theta\cos\varphi ~~,~~ y=r\sin\theta\sin\varphi ~~,~~ z=r\cos\theta
+\]
+
+\subsubsection{Convert From and To Cylindrical coordinates}
+Cylindrical coordinates may be converted into spherical coordinates, by the formulas:
+
+\[
+r=\sqrt{\rho^2 + z^2} ~~,~~ \theta=\arctan\frac{\rho}{z}=\arccos\frac{z}{r}   ~~,~~ \varphi = \varphi
+\]
+
+Conversely, the spherical coordinates may be converted into cylindrical coordinates by the formulae:
+
+\[
+\rho = r\sin\theta   ~~,~~  \varphi=\varphi  ~~,~~ z = r\cos\theta
 \]
